--- a/docs/JavaScript/110.md
+++ b/docs/JavaScript/110.md
@@ -4,7 +4,7 @@ date: 2022-11-04 22:52:49
 tags: JavaScript
 ---
 
-![image.png](https://p9-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/159802561af04a4d8d3e5f70b83c9afa~tplv-k3u1fbpfcp-watermark.image?)
+![25_12:24_Z0NSqN](https://raw.githubusercontent.com/acmu/pictures/master/uPic/2024-05/25_12:24_Z0NSqN.png)
 
 ## 普通 try catch
 
@@ -36,7 +36,7 @@ console.log('foo()', foo());
 
 所以输出是：
 
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/02d148e5ff644b2fa3b3cce800f2226e~tplv-k3u1fbpfcp-watermark.image?)
+![25_12:26_fvJYiy](https://raw.githubusercontent.com/acmu/pictures/master/uPic/2024-05/25_12:26_fvJYiy.png)
 
 下面增加难度
 
@@ -61,11 +61,12 @@ console.log('foo()', foo());
 
 try 里面加了 return，那么 finally 的代码还会执行吗？会的。
 
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/6f43c93d67484e2a8bdef048d44f40bf~tplv-k3u1fbpfcp-watermark.image?)
+
+![25_12:26_qggQrw](https://raw.githubusercontent.com/acmu/pictures/master/uPic/2024-05/25_12:26_qggQrw.png)
 
 输出如下：
 
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/17553567633e42b7a988a7bc7b6ba22e~tplv-k3u1fbpfcp-watermark.image?)
+![25_12:27_voDM0A](https://raw.githubusercontent.com/acmu/pictures/master/uPic/2024-05/25_12:27_voDM0A.png)
 
 即使 try 里面有 return，那么 finally 仍然会执行。
 
@@ -91,7 +92,7 @@ console.log('foo()', foo());
 
 finally 的 return 会覆盖掉 try 的 return。
 
-![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/f6b1c00e995d44fcaea52e403ff8d0a3~tplv-k3u1fbpfcp-watermark.image?)
+![25_12:28_aoBwaL](https://raw.githubusercontent.com/acmu/pictures/master/uPic/2024-05/25_12:28_aoBwaL.png)
 
 这代码怎么越来越奇怪了呀，确实，并[不推荐 finally 里写 return](https://eslint.org/docs/latest/rules/no-unsafe-finally)，正常写法应该是你需要 foo 函数的返回值，那么代码正常的话，就应该是在 try 里 return，代码抛出异常的话，就应该在 catch 里 return，finally 应该只做一些 try 和 catch 都做出的时，比如关闭 loading：
 
@@ -111,4 +112,4 @@ const foo = async () => {
 
 这才是更合理的写法。
 
-![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9a43f9c6f5ad4efeaba16a7b22271308~tplv-k3u1fbpfcp-watermark.image?)
+![25_12:28_UtkRqr](https://raw.githubusercontent.com/acmu/pictures/master/uPic/2024-05/25_12:28_UtkRqr.png)
